<resources>
    <string name="app_name">QuizApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id
        interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales
        nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
        himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet,
        imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a
        condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut
        sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros
        porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl
        nec dolor bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at,
        mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt
        nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id.
        Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse
        sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor
        sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor
        varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris.
        Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non
        viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat
        diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
        egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer
        dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec
        maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce
        dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="welcome_welcome">Welcome in our application</string>
    <string name="start_welcome" translatable="false">START</string>
    <string name="Quiz_mainpage" translatable="false">Quiz</string>
    <string name="main_menu_what_to_do">What do you want to do?</string>
    <string name="main_menu_title">Main menu</string>
    <string name="login_text">Login</string>
    <string name="return_text">Return</string>
    <string name="credits_text">Credits</string>
    <string name="credits_label">Credits</string>
    <string name="close_text">CLOSE</string>
    <!-- Preference Titles -->
    <string name="hello_blank_fragment" translatable="false">Hello Blank Fragment</string>
    <string name="messages_header" translatable="false">Messages Header</string>
    <string name="signature_title" translatable="false">Signature Title</string>
    <string name="reply_title" translatable="false">Reply Title</string>
    <string name="sync_header" translatable="false">Sync Header</string>
    <string name="sync_title" translatable="false">Sync Title</string>
    <string name="attachment_summary_off" translatable="false">Attachment Summary Off</string>
    <string name="attachment_title" translatable="false">Attachment Title</string>
    <string name="attachment_summary_on" translatable="false">Attachment Summary On</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_text">Username</string>
    <string name="or_text">OR</string>
    <string name="Sign_up_text">Sign up</string>
    <string name="username_hints">username</string>
    <string name="password_hints">password</string>
    <string name="login_label">Login</string>
    <string name="to_be_done" translatable="false">NaN</string>
    <string name="database_link">Type the link to the database below</string>
    <string name="password_database">Type the password to the database below</string>
    <string name="type_here_text">Type here</string>
    <string name="sign_up">Sign up form</string>
    <string name="username_new">Type your username below</string>
    <string name="password_new">Type your password below</string>
    <string name="password_repeat">Repeat your password</string>
    <string name="agree_to_all">I agree to everything this app does to my data</string>
    <string name="save_text">Save</string>
    <string name="sign_up_label">Sign up</string>
    <string name="db_link_hint">Link to the database</string>
    <string name="db_password_hint">Database password</string>
    <string name="current_text">Current: www.github.com</string>
    <string name="problem_info">We are sorry to inform you but the program has run into some problems.\n\nPlease try restarting and contacing customer service.</string>
    <string name="db_username">Type the username to the database below</string>
    <string name="username_hint">Database username</string>
    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

</resources>