<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral80"
    tools:context=".ui.LoginFragment">

    <EditText
        android:id="@+id/passowrdInput"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_marginTop="@dimen/top_margin"
        android:autofillHints="@string/password_hints"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/material_dynamic_neutral40"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:layout_marginTop="@dimen/fab_margin"
        android:autofillHints="@string/username_hints"
        android:ems="10"
        android:hint="@string/username_text"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="@color/material_dynamic_neutral40"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLoginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passowrdInput" />

    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/or_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginLogin" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/Sign_up_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_text" />
</androidx.constraintlayout.widget.ConstraintLayout>