<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.quizapp.ui.WelcomeFragment"
        android:label="@string/Quiz_mainpage"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_mainMenuFragment"
            app:destination="@id/mainMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="com.example.quizapp.ui.MainMenuFragment"
        android:label="@string/main_menu_title"
        tools:layout="@layout/fragment_main_menu">
        <action
            android:id="@+id/action_mainMenuFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_creditsFragment"
            app:destination="@id/creditsFragment" />
    </fragment>
    <fragment
        android:id="@+id/creditsFragment"
        android:name="com.example.quizapp.ui.CreditsFragment"
        android:label="@string/credits_label"
        tools:layout="@layout/fragment_credits">
        <action
            android:id="@+id/action_creditsFragment_to_mainMenuFragment"
            app:destination="@id/mainMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.quizapp.ui.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.quizapp.ui.LoginFragment"
        android:label="@string/login_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_loginFragment_to_loggedInFragment"
            app:destination="@id/loggedInFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.quizapp.ui.SignUpFragment"
        android:label="@string/sign_up_label"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/problemFragment"
        android:name="com.example.quizapp.error.ProblemFragment"
        android:label="fragment_problem"
        tools:layout="@layout/fragment_problem" />
    <fragment
        android:id="@+id/loggedInFragment"
        android:name="com.example.quizapp.ui.LoggedInFragment"
        android:label="@string/logged_in_label"
        tools:layout="@layout/fragment_logged_in" />
</navigation>